// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <MemoizedFormattedMessage
        defaultMessage="Select a primary time field for use with the global time filter."
        id="indexPatternManagement.createIndexPattern.stepTime.timeDescription"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Time field"
        id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
      />
    }
    labelAppend={
      <EuiLoadingSpinner
        size="s"
      />
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={true}
      name="timeField"
      options={
        Array [
          Object {
            "text": "Loading…",
            "value": "",
          },
        ]
      }
    />
  </EuiCompressedFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <MemoizedFormattedMessage
        defaultMessage="Select a primary time field for use with the global time filter."
        id="indexPatternManagement.createIndexPattern.stepTime.timeDescription"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Time field"
        id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
      />
    }
    labelAppend={
      <EuiText
        size="xs"
      >
        <EuiLink
          onClick={[Function]}
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Refresh"
            id="indexPatternManagement.createIndexPattern.stepTime.refreshButton"
          />
        </EuiLink>
      </EuiText>
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiCompressedFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <MemoizedFormattedMessage
        defaultMessage="Select a primary time field for use with the global time filter."
        id="indexPatternManagement.createIndexPattern.stepTime.timeDescription"
      />
    </p>
  </EuiText>
  <EuiSpacer />
  <EuiCompressedFormRow
    describedByIds={Array []}
    display="rowCompressed"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    label={
      <Memo(MemoizedFormattedMessage)
        defaultMessage="Time field"
        id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
      />
    }
    labelAppend={
      <EuiText
        size="xs"
      >
        <EuiLink
          onClick={[Function]}
        >
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Refresh"
            id="indexPatternManagement.createIndexPattern.stepTime.refreshButton"
          />
        </EuiLink>
      </EuiText>
    }
    labelType="label"
  >
    <EuiCompressedSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiCompressedFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <MemoizedFormattedMessage
        defaultMessage="The indices which match this index pattern don't contain any time fields."
        id="indexPatternManagement.createIndexPattern.stepTime.field.noTimeFieldsLabel"
      />
    </p>
  </EuiText>
</EuiForm>
`;
